api: HttpHeader impl and test